--- a/app/views/search.html
+++ b/app/views/search.html
@@ -2,7 +2,7 @@
     <div class="row no-margin-hr">
         <div style="margin-left:44px;">Search Results Macthing:"{{globalSearchData}}"</div>
         <div class="row no-margin-hr">
-            <div class="pull-left"><img src="images/left-arrow.png" class="back-alignment" ng-click="backButtonAction()">
+            <div class="pull-left back-alignment" style="margin-right: 10px;"><img src="images/left.png" ng-click="backButtonAction()">
             </div>
             <div class="input-group">
                 <!-- <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span> -->
