--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -380,7 +380,7 @@ body {
 }
 
 .table_container {
-    margin-top: 19px;
+    margin-top: 23px;
 }
 
 .login-image {
@@ -1106,8 +1106,8 @@ td {
 }
 
 .back-alignment {
-    margin-right: 10px;
-    margin-left: 3px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 .isSearchHeaderSectionHeightInVocherScreen {
@@ -1120,4 +1120,13 @@ td {
 
 .isSearchHeaderSectionHeightInBalanceSheet {
     margin-top: 45px;
+}
+
+.display-table-header {
+    display: table;
+}
+
+.display-cell-header {
+    display: table-cell;
+    vertical-align: middle;
 }
