--- a/app/views/company.html
+++ b/app/views/company.html
@@ -86,7 +86,7 @@
                 <h1 class="modal-title ">Add Company</h1>
                 <div class="row no-margin-hr">
                     <div class="col-md-12 no-padding-hr">
-                        <label class="pull-right"><input type="checkbox" ng-model="props.status" ng-init="props.status=true"><span> Active</span></label>
+                        <label class="pull-right"><input type="checkbox" ng-model="props.isActive" ng-init="props.isActive=true"><span> Active</span></label>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                 <h1 class="modal-title ">Edit Company</h1>
                 <div class="row no-margin-hr">
                     <div class="col-md-12 no-padding-hr">
-                        <label class="pull-right"><input type="checkbox" ng-model="props.status"><span> Active</span></label>
+                        <label class="pull-right"><input type="checkbox" ng-model="props.isActive"><span> Active</span></label>
                     </div>
                 </div>
             </div>
