--- a/app/views/header.html
+++ b/app/views/header.html
@@ -17,7 +17,7 @@
                     <div id="navbar" class="navbar-collapse collapse pull-right">
                         <ul class="nav nav-tabs tabs no-border-bottom">
                             <li ng-show="patnerstab" ui-sref="patners">
-                                <a class="smalltabs" data-toggle="tab">Patners</a>
+                                <a class="smalltabs" data-toggle="tab">Partners</a>
                             </li>
                             <li ng-show="logintab" ui-sref="login">
                                 <a class="smalltabs" ng-class="{'active': logintabbottom===true}" data-toggle="tab">Login</a>
