--- a/app/views/resetpassword.html
+++ b/app/views/resetpassword.html
@@ -1,4 +1,4 @@
-<div id="resetpassword" class="container">
+<div class="container">
     <div class="row row_center">
         <div class="col-md-12">
             <div class="col-md-4 col-md-offset-4">
@@ -19,13 +19,13 @@
                         <div class="col-md-12 form-group" ng-show="ressetpasswordFrom.otp.$invalid">
                             <div class="col-md-12 no-padding-hr">
                                 <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.otp.$error.required">Please enter otp</span>
-                                <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.otp.$invalid && !ressetpasswordFrom.otp.$error.required">Please enter valid password</span>
+                                <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.otp.$invalid && !ressetpasswordFrom.otp.$error.required">Please enter valid Otp</span>
                             </div>
                         </div>
                     </div>
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <input type="password" class="form-control" ng-model="user.pwd" name="password" id="password" placeholder="Enter password" ng-pattern="/^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).*$/" required="required" ng-minlength="5" ng-change="editingfields()">
+                            <input type="password" class="form-control" ng-model="user.pwd" name="password" id="password" placeholder="Enter password" ng-pattern="/^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).*$/" required="required" ng-minlength="4" ng-change="editingfields()">
                         </div>
                     </div>
                     <div class="row" ng-show="ressetpasswordFrom.password.$dirty && ressetpasswordFrom.password.$error">
@@ -38,7 +38,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <input type="password" class="form-control" ng-model="user.confirm_password" name="confirmpassword" id="confirmpassword" placeholder="Enter confirm password" ng-pattern="/^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).*$/" required="required" ng-minlength="5"
+                            <input type="password" class="form-control" ng-model="user.confirm_password" name="confirmpassword" id="confirmpassword" placeholder="Enter confirm password" ng-pattern="/^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).*$/" required="required" ng-minlength="4"
                                 ng-change="editingfields()">
                         </div>
                     </div>
