adding changes for search and ledger assiging to location and tan validation in location screen

--- a/app/views/ledger.html
+++ b/app/views/ledger.html
@@ -14,7 +14,7 @@
                     <span class="text-name">Loss for the year &#58;</span>
                     <span class="text-value">{{((-1 * rootgroupdiff) | INRCurrency)}}</span>
                 </li>
-                <li class="listheightvalues custom-content-border" ng-if="showprofitorloss && rootgroupdiff >= 0" ng-click="selectReport()">s
+                <li class="listheightvalues custom-content-border" ng-if="showprofitorloss && rootgroupdiff >= 0" ng-click="selectReport()">
                     <span class="text-name">Profit for the year &#58;</span>
                     <span class="text-value">{{((rootgroupdiff) | INRCurrency)}}</span>
                 </li>
