--- a/app/views/header.html
+++ b/app/views/header.html
@@ -28,7 +28,7 @@
             </div>
             <div class="row no-margin-hr">
                 <div id="navbar " class="navbar-collapse collapse header-tabs">
-                    <div style="width:70%;margin:0 auto;">
+                    <div class="header-middle-adjust">
                         <div class="pull-left" ng-click="gotoCompanyPage()">
                             <img src="images/mobibooks.png" alt="logo" height="45" />
                         </div>
