--- a/app/views/search.html
+++ b/app/views/search.html
@@ -6,7 +6,7 @@
             </div>
             <div class="input-group">
                 <!-- <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span> -->
-                <input type="text" class="form-control" ng-model="globalSearchData" placeholder="Search" ng-change="searchboxchangeAction()">
+                <input type="text" name="balanceSheetSearch" class="form-control" ng-model="globalSearchData" placeholder="Search" ng-change="searchboxchangeAction()" autofocus>
                 <span class=" input-group-btn "><button class="btn btn-default " ng-click="searchfunctionality()" type="button "><i class="glyphicon glyphicon glyphicon-search"></i></button></span>
             </div>
         </div>
