--- a/app/views/m.location.html
+++ b/app/views/m.location.html
@@ -12,8 +12,9 @@
         <ul ng-repeat="location in locationsList" class="list-styles no-padding-hr">
             <li class="m-custom-content-border m-list-align-left actionsmenu">
                 <span class="m-main-field">{{location.display_name}}</span>
-                <span ng-show="location.mobile" class="glyphicon glyphicon-earphone"></span>
-                <a class="m-sub-fiels m-phoneNumber colors" href="tel:{{location.mobile}}">{{location.mobile}}</a>
+                <!-- <span ng-show="location.mobile" class="glyphicon glyphicon-earphone"></span> -->
+                <span class="m-sub-field m-phoneNumber">{{location.mobile}}</span>
+                <!-- href="tel:{{location.mobile}}" -->
             </li>
         </ul>
     </div>
